@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Load POE before Mojo::Reactor to avoid event loop issues
 
 0.004     2015-02-01 14:23:42-05:00 America/New_York
   - Subclass Mojo::Reactor instead of Mojo::Reactor::Poll
